--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,15 @@
     transform: translateY(0);
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
 
 .homepage {
   background-image: url('../public/bg5.jpg');
